Changes related to nlform dropdown overflow issue.

--- a/RevenuePlanner/Content/css/style_extended.css
+++ b/RevenuePlanner/Content/css/style_extended.css
@@ -2083,12 +2083,6 @@ span.info-icon-grey:hover{
 .dropdown-businessUnit .sbFocus {
     text-shadow: none;
 }
-/* */
-
-.nl-field ul {
-    max-height: 400px;
-    /*overflow:auto;*/
-}
 
 /* Added by KAPIL - Global Change */
 label {
